# RESA-Pro

./: .gitignore  .pre-commit-config.yaml  PROJECT_STATUS.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
data/: materials.json  propellants.json
resa_pro/: __init__.py
resa_pro/cli/: __init__.py  __main__.py  chamber_cmd.py  cooling_cmd.py  cycle_cmd.py  feed_cmd.py  geometry_cmd.py  gui_cmd.py  info_cmd.py  injector_cmd.py  main.py  nozzle_cmd.py  optimize_cmd.py  report_cmd.py  uq_cmd.py
resa_pro/core/: __init__.py  chamber.py  config.py  cooling.py  feed_system.py  fluids.py  injector.py  materials.py  moc.py  nozzle.py  thermal.py  thermo.py
resa_pro/cycle/: __init__.py  solver.py
resa_pro/cycle/components/: __init__.py  base.py  heat_exchanger.py  pipe.py  pump.py  turbine.py  valve.py
resa_pro/geometry3d/: engine.py
resa_pro/optimization/: __init__.py  optimizer.py  uq.py
resa_pro/plugins/: base.py  manager.py
resa_pro/plugins/examples/: mass_estimator.py
resa_pro/reports/: summary.py
resa_pro/ui/: __init__.py  app.py  main_window.py
resa_pro/ui/modules/: __init__.py  chamber_tab.py  cooling_tab.py  cycle_tab.py  export_tab.py  injector_tab.py  nozzle_tab.py  optimize_tab.py  performance_tab.py  thermal_tab.py
resa_pro/ui/styles/: __init__.py  theme.py
resa_pro/ui/widgets/: __init__.py  param_input.py  plot_widget.py  result_display.py
resa_pro/utils/: __init__.py  constants.py  interpolation.py  units.py  validation.py
tests/: test_chamber.py  test_config.py  test_cooling.py  test_cycle.py  test_cycle_solver.py  test_feed_system.py  test_geometry3d.py  test_heat_exchanger.py  test_injector.py  test_materials.py  test_moc.py  test_nozzle.py  test_optimizer.py  test_plugin_manager.py  test_reports.py  test_thermal.py  test_thermo.py  test_uq.py  test_utils.py
tests/integration/: test_cli_workflow.py
